--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,76 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>${project.basedir}/target/generated-resources</directory>
+            </resource>
+        </resources>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.github.blutorange</groupId>
+                    <artifactId>closure-compiler-maven-plugin</artifactId>
+                    <version>2.27.0</version>
+                    <configuration>
+                        <baseSourceDir>${project.basedir}/src/main</baseSourceDir>
+                        <baseTargetDir>${project.build.directory}/generated-resources</baseTargetDir>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>default-minify</id>
+                            <configuration>
+                                <encoding>UTF-8</encoding>
+                                <sourceDir>javascript</sourceDir>
+                                <targetDir>static</targetDir>
+                                <includes>**/*.js</includes>
+                                <skipMerge>false</skipMerge>
+                                <outputFilename>script.js</outputFilename>
+                            </configuration>
+                            <goals>
+                                <goal>minify</goal>
+                            </goals>
+                            <phase>generate-resources</phase>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>io.github.cleydyr</groupId>
+                    <artifactId>dart-sass-maven-plugin</artifactId>
+                    <version>1.1.0</version>
+                    <executions>
+                        <execution>
+                            <id>generate-css-using-sass</id>
+                            <phase>generate-resources</phase>
+                            <goals>
+                                <goal>compile-sass</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <outputFolder>${project.build.directory}/classes/static</outputFolder>
+                        <style>COMPRESSED</style>
+                        <noSourceMap>true</noSourceMap>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.github.blutorange</groupId>
+                <artifactId>closure-compiler-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>io.github.cleydyr</groupId>
+                <artifactId>dart-sass-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
